Fixed bug #43522 (stream_get_line() eats additional characters)